flex-alignment fix

--- a/CSS/Quote.css
+++ b/CSS/Quote.css
@@ -15,19 +15,23 @@ body {
     font-family: sans-serif;
 }
 
-main {
+.main {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+section {
     background-color: #f3f3f8;
     display: flex;
-    align-content: center;
-    justify-content: space-between;
     /* border-style: solid;
     border-color: #000000;
     border-width: 8px; */
     border-radius: 10px;
     height: 350px;
     width: 500px;
-    margin: auto;
-    margin-top: 10vh;
     padding: 50px;
     column-gap: 50px;
 }
@@ -106,6 +110,11 @@ article {
     height: 29px;
     margin-block-start: 0;
 }
+
+
+/* #Love-icon:hover {
+    zoom: 110%;
+} */
 
 .Colored_details,
 #color-text {
